# Astrum-Renderer

./: .gitmodules  .luarc.json  :w  CMakeLists.txt  README.md  \  ass  build.sh  todo.txt
project/source/: main.cpp
project/source/Core/: application.cpp  main.cpp
project/source/Core/application/include/: application.h  application_layer.h
project/source/Core/application/source/: application.cpp
project/source/Core/assetmanager/: asset_importer.cpp  asset_manager.cpp
project/source/Core/assetmanager/include/: asset_manager.h
project/source/Core/assetmanager/source/: asset_importer.cpp  asset_manager.cpp
project/source/Core/console/: console.cpp
project/source/Core/console/include/: console.h
project/source/Core/console/source/: console.cpp
project/source/Core/exeptions/include/: core_exeptions.h
project/source/Core/exeptions/source/: core_exeptions.cpp
project/source/Core/include/: application.h
project/source/Core/include/assetmanager/: asset_importer.h
project/source/Core/include/layers/: assetmanager_application_layer.h  lua_application_layer.h  render_application_layer.h  utils_application_layer.h
project/source/Core/include/lua/: camera_lua_api_layer.h  debug_lua_api_layer.h  input_lua_api_layer.h  light_lua_api_layer.h  lua_api.h  lua_render_functions.h  lua_util_functions.h  material_lua_api_layer.h  mesh_lua_api_layer.h  scene_lua_api_layer.h
project/source/Core/layers/: assetmanager_application_layer.cpp  lua_application_layer.cpp  render_application_layer.cpp  utils_application_layer.cpp
project/source/Core/layers/include/: assetmanager_application_layer.h  lua_application_layer.h  render_application_layer.h  windowmanager_application_layer.h
project/source/Core/layers/source/: assetmanager_application_layer.cpp  lua_application_layer.cpp  render_application_layer.cpp  utils_application_layer.cpp  windowmanager_application_layer.cpp
project/source/Core/lua/: camera_lua_api_layer.cpp  debug_lua_api_layer.cpp  input_lua_api_layer.cpp  light_lua_api_layer.cpp  lua_api.cpp  lua_function_utils.cpp  lua_rendering_functions.cpp  material_lua_api_layer.cpp  mesh_lua_api_layer.cpp  scene_lua_api_layer.cpp
project/source/Core/lua/include/: camera_lua_api_layer.h  debug_lua_api_layer.h  input_lua_api_layer.h  light_lua_api_layer.h  lua_api.h  lua_api_layer.h  material_lua_api_layer.h  mesh_lua_api_layer.h  postprocessing_lua_api_layer.h  scene_lua_api_layer.h  window_lua_api_layer.h
project/source/Core/lua/source/: camera_lua_api_layer.cpp  debug_lua_api_layer.cpp  input_lua_api_layer.cpp  light_lua_api_layer.cpp  lua_api.cpp  material_lua_api_layer.cpp  mesh_lua_api_layer.cpp  postprocessing_lua_api_layer.cpp  scene_lua_api_layer.cpp  (+1 more)
project/source/Renderer/: asset_manager.cpp  camera.cpp  mesh.cpp  mesh_builder.cpp  object.cpp  object_manager.cpp  renderer.cpp  shader.cpp  transform.cpp
project/source/Renderer/include/: asset_importer.h  asset_manager.h  camera.h  cubemap.h  framebuffer.h  light.h  material.h  mesh.h  mesh_builder.h  model.h  object.h  object_manager.h  renderer.h  screen.h  shader.h  texture.h  transform.h
project/source/Renderer/source/: asset_importer.cpp  asset_manager.cpp  camera.cpp  cubemap.cpp  framebuffer.cpp  light.cpp  material.cpp  mesh.cpp  mesh_builder.cpp  model.cpp  object.cpp  object_manager.cpp  renderer.cpp  screen.cpp  shader.cpp  texture.cpp
project/source/Utils/: input.cpp
project/source/Utils/include/: file_watcher.h  input.h
project/source/Utils/source/: file_watcher.cpp  input.cpp
project/source/shaders/: screen_fragment.glsl  screen_vertex.glsl  standard_fragment.glsl  standard_vertex.glsl
(+34 files in other folders)
